# dirlens

./: .gitignore  AGENT_RULE.md  AGENT_RULE_STRICT.md  LICENSE  NOTICE  README.md  dirlens.bat  dirlens.py  package.json  pyproject.toml  treelens  treelens.bat
.github/workflows/: github-releases-publish.yml  npm-publish.yml  publish-all.yml  publish-pypi.yml  pypi-publish.yml  rust-ci.yml  rust-release.yml
rust/: Cargo.toml  pyproject.toml
rust/crates/dirlens-cli/: Cargo.toml
rust/crates/dirlens-cli/src/: cache.rs  config.rs  main.rs  mcp.rs  providers.rs  spinner.rs  tui.rs
rust/crates/dirlens-core/: Cargo.toml
rust/crates/dirlens-core/src/: args.rs  cfg.rs  check.rs  colors.rs  emoji.rs  filter.rs  fmt.rs  fnmatch.rs  gitignore.rs  i18n.rs  lib.rs  modes.rs  provider.rs  pyc.rs  render_html.rs  render_json.rs  render_text.rs  report.rs  run.rs  session.rs  warm.rs
rust/crates/dirlens-core/src/analysis/: extras.rs  gitlog.rs  gitstatus.rs  index.rs  mod.rs  outline.rs  text_metrics.rs  todo.rs
rust/crates/dirlens-core/src/analysis/ast/: js.rs  mod.rs  python.rs  rustlang.rs  treesitter.rs
rust/crates/dirlens-wasm/: Cargo.toml
rust/crates/dirlens-wasm/src/: lib.rs
rust/npm/: assemble.py  launcher.js
scripts/: sync-version.js
swift/: Package.swift  README.md
swift/Sources/DirlensCore/: Args.swift  Cfg.swift  Check.swift  Colors.swift  Emoji.swift  Filter.swift  Fmt.swift  Fnmatch.swift  Gitignore.swift  JSONValue.swift  OrderedDict.swift  PathUtil.swift  Provider.swift  Pyc.swift  Regexp.swift  RenderHTML.swift  RenderJSON.swift  RenderText.swift  Run.swift  Session.swift
swift/Sources/DirlensCore/Analysis/: BPE.swift  Extras.swift  GitLog.swift  Index.swift  Outline.swift  Scanner.swift  TextMetrics.swift  Todo.swift
swift/Sources/dirlens/: ArgsParse.swift  ExternalAst.swift  Providers.swift  main.swift
swift/Tests/DirlensCoreTests/: CoreTests.swift
swift/scripts/: test-clt.sh
tests/: bench.py
tests/golden/: DELTAS.md  README.md  SWIFT-DELTAS.md  ast_check.py  cases.py  fixtures.py  run.py  tier_check.py
tests/golden/snapshots/basic/: L1.out  L2.out  L_over_depth.out  all.out  bar.out  check.out  check_json.out  combo_display.out  copy.err  copy.out  date.out  depth2.out  dirs_only.out  emoji.out  exclude_dir.out  exclude_log.out  files_first.out  follow.out  follow_L3.out  full_path.out  html.file.dirlens.html  html.out  html_named.file.out.html  html_named.out  include_md.out  include_multi.out  json.out  json_J.out  json_L2.out  json_all.out  markdown.out  max_size.out  min_size.out  mtime_sort.out  mtime_sort_rev.out  no_color.out  perms.out  prune_py.out  reverse.out  size_sort.out  (+3 more)
tests/golden/snapshots/edge/: edge_L2.out  edge_agent.out  edge_base.out  edge_html.file.dirlens.html  edge_html.out  edge_json_T.out  edge_todo.out  edge_tokens.out
tests/golden/snapshots/gitignored/: gi_G.out  gi_G_all.out  gi_G_json.out  gi_G_prune.out  gi_H.out  gi_H_json.out  gi_agent.out  gi_agent_json.out  gi_check.out  gi_noG.out
tests/golden/snapshots/multi_lang/: ml_agent.out  ml_agent_L2.out  ml_agent_json.out  ml_ai.err  ml_ai.out  ml_api.out  ml_base.out  ml_combo_nm.out  ml_combo_tk.out  ml_config.out  ml_entry.out  ml_html_agentish.file.dirlens.html  ml_html_agentish.out  ml_imports.out  ml_json_A.out  ml_json_F.out  ml_json_K.out  ml_json_M.out  ml_json_N.out  ml_json_O.out  ml_json_T.out  ml_json_V.out  ml_outline.out  ml_tests.out  ml_todo.out  ml_tokens.out
tests/golden/snapshots/rust_lang/: rs_agent.out  rs_agent_json.out  rs_api.out  rs_imports.out  rs_outline.out  rs_tests.out
