[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dirlens"
version = "1.0.20"
description = "Directory tree viewer with file sizes / ファイルサイズ付きディレクトリツリー表示ツール"
requires-python = ">=3.8"
authors = [{name = "igarin"}]
keywords = ["cli", "tree", "file-size", "directory", "terminal"]
license = {text = "UNLICENSED"}

[project.urls]
Repository = "https://github.com/igarinpiano/dirlens"

[project.scripts]
dirlens = "dirlens:main"

[tool.setuptools]
py-modules = ["dirlens"]
