[workspace]
resolver = "2"
members = [
    "crates/dirlens-core",
    "crates/dirlens-cli",
    "crates/dirlens-wasm",
]

[workspace.package]
version = "1.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/igarinpiano/dirlens"

[profile.release]
lto = true
strip = true

# 開発ビルドの容量削減（debuginfo が target/ の大半を占めるため）
[profile.dev]
debug = false
incremental = false
