[workspace]
resolver = "2"
members = [
    "crates/dirlens-core",
    "crates/dirlens-cli",
    "crates/dirlens-wasm",
]

[workspace.package]
version = "1.2.13"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/igarinpiano/dirlens"

# crates.io に公開する dirlens-core への参照はここで一元管理する。
# dirlens-core と dirlens（crates/dirlens-cli）/dirlens-wasm は常に同じ
# workspace.package.version で同時に公開されるため、version 要求はメジャー
# バージョンのみ固定すればよい（"1" = >=1.0.0, <2.0.0）。パッチ/マイナーの
# 通常バージョンアップではこの行を触る必要はなく、2.0.0 のようなメジャー
# アップ時にのみ更新すればよい。
[workspace.dependencies]
dirlens-core = { path = "crates/dirlens-core", version = "1" }

[profile.release]
lto = true
strip = true

# 開発ビルドの容量削減（debuginfo が target/ の大半を占めるため）
[profile.dev]
debug = false
incremental = false
