[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "dirlens"
description = "Directory tree viewer with file sizes / ファイルサイズ付きディレクトリツリー表示ツール"
requires-python = ">=3.8"
authors = [{ name = "igarin" }]
keywords = ["cli", "tree", "file-size", "directory", "terminal"]
license = { text = "Apache-2.0" }
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/igarinpiano/dirlens"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/dirlens-cli/Cargo.toml"
strip = true
