[package]
name = "dirlens-wasm"
description = "dirlens の wasm バインディング（ホスト供給ファイルツリーを解析する）"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dirlens-core = { path = "../dirlens-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
